--- a/notebooks/binary_average_attack.ipynb
+++ b/notebooks/binary_average_attack.ipynb
@@ -61,7 +61,7 @@
     "node_single.set_private_data(name=\"guilty\", data=np.array([n]))\n",
     "dp_mechanism = RandomizedResponseBinary(f0=0.8, f1=0.8)\n",
     "data_access_definition = DataAccessDefinition(dp_mechanism=dp_mechanism)\n",
-    "node_single.configure_private_data_access(\"guilty\", data_access_definition)"
+    "node_single.configure_data_access(\"guilty\", data_access_definition)"
    ]
   },
   {
@@ -85,7 +85,7 @@
     }
    ],
    "source": [
-    "result = node_single.query_private_data(private_property=\"guilty\")\n",
+    "result = node_single.query(private_property=\"guilty\")\n",
     "print(\"The result of one query is: \" + str(int(result)))"
    ]
   },
@@ -105,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.784\n"
+      "0.788\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
     "N = 500\n",
     "result_query = np.empty(N)\n",
     "for i in range(N):\n",
-    "    result_query[i] = node_single.query_private_data(private_property=\"guilty\")\n",
+    "    result_query[i] = node_single.query(private_property=\"guilty\")\n",
     "print(np.mean(result_query))"
    ]
   },
@@ -135,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The PRR is: 0\n"
+      "The PRR is: 1\n"
      ]
     }
    ],
@@ -150,9 +150,9 @@
     "node_single_prr = DataNode()\n",
     "data_binary = np.array([1])  #the node is guilty\n",
     "node_single_prr.set_private_data(name=\"guilty\", data=np.array([n]))\n",
-    "node_single_prr.configure_private_data_access(\"guilty\", data_access_definition)\n",
+    "node_single_prr.configure_data_access(\"guilty\", data_access_definition)\n",
     "\n",
-    "permanent_response = node_single_prr.query_private_data(private_property=\"guilty\")\n",
+    "permanent_response = node_single_prr.query(private_property=\"guilty\")\n",
     "print(\"The PRR is: \" + str(int(permanent_response)))\n",
     "\n",
     "# we save the prr as a new piece of information\n",
@@ -168,14 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.19\n"
+      "0.814\n"
      ]
     }
    ],
@@ -183,7 +183,7 @@
     "result_query = np.empty(N)\n",
     "for i in range(N):\n",
     "    # we only access the result of the query done to the PRR\n",
-    "    result_query[i] = node_single_prr.query_private_data(private_property=\"guilty\")[1]\n",
+    "    result_query[i] = node_single_prr.query(private_property=\"guilty\")[1]\n",
     "print(np.mean(result_query))"
    ]
   },
@@ -211,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
