--- a/notebooks/binary_average_attack.ipynb
+++ b/notebooks/binary_average_attack.ipynb
@@ -8,9 +8,8 @@
     "\n",
     "The basic idea of differential privacy is to make a particular query stochastic so that the underlying data is kept private. The average attack consists of performing the same query many times in order to reliably estimate the underlying data. This is, of course, not desirable so we should either limit the number of queries or design algorithms that are not vulnerable under this kind of attack.\n",
     "\n",
-    "In this notebook we present a simple example of this phenomenon based on a single node that contains one binary number $n$ that encondes whether the node is guilty ($n=1$) or innocent ($n=0$). A randomized algorithm is used to query the node in order to preserve the privacy of $n$.\n",
-    "\n",
-    "[Check reference for this]"
+    "In this notebook we present a simple example of this phenomenon based on a single node that contains one binary number $n$ that encondes whether the node is guilty ($n=1$) or innocent ($n=0$). \n",
+    "A randomized response algorithm (see [The Algorithmic Foundationsof Differential Privacy](https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf), Section 3.2) is used to query the node in order to preserve the privacy of $n$."
    ]
   },
   {
@@ -130,7 +129,7 @@
    "source": [
     "### Permanent randomized response\n",
     "\n",
-    "A possible solution to this problem is to create a node that contains two pieces of information: the true data and a **permantent randomized respose** (PRR). The latter is initialized to None and, once the node receives the first query, it creates a random binary number following the algorithm described above which is saved as the PRR. The result of the query is then a randomized response using the PRR as input. This way, even if the query is performed a large number of times, the attacker may only guess with certainty the PRR, but not the true data."
+    "A possible solution to this problem (e.g. see [RAPPOR technology](https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/42852.pdf) and [this paper](https://www.sciencedirect.com/science/article/pii/S0020025518310429)) is to create a node that contains two pieces of information: the true data and a **permantent randomized respose** (PRR). The latter is initialized to None and, once the node receives the first query, it creates a random binary number following the algorithm described above which is saved as the PRR. The result of the query is then a randomized response using the PRR as input. This way, even if the query is performed a large number of times, the attacker may only guess with certainty the PRR, but not the true data."
    ]
   },
   {
@@ -197,9 +196,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Sherpa_venvPy3",
    "language": "python",
-   "name": "python3"
+   "name": "sherpa_venvpy3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -211,9 +210,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
