--- a/notebooks/differential_privacy_laplace.ipynb
+++ b/notebooks/differential_privacy_laplace.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Laplace Mechanishm\n",
+    "# Laplace Mechanism\n",
     "\n",
-    "We introduce the Laplace mechanism following [Dwork]. Let $\\mathcal X$ be the set of possible rows in a database so that we can represent a particular database by a histogram $x\\in\\mathbb N^{|\\mathcal X|}$.\n",
+    "We introduce the Laplace mechanism following [The Algorithmic Foundations of Differential Privacy](https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf). Let $\\mathcal X$ be the set of possible rows in a database so that we can represent a particular database by a histogram $x\\in\\mathbb N^{|\\mathcal X|}$.\n",
     "\n",
     "Given a particular function $f:\\mathbb N^{|\\mathcal X|}\\rightarrow \\mathbb R^k$, we define the Laplace mechanism as the collection of conditional probabilities given by\n",
     "\n",
@@ -295,9 +295,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Sherpa_venvPy3",
    "language": "python",
-   "name": "python3"
+   "name": "sherpa_venvpy3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -309,9 +309,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
