Assuming differential privacy mechanism as a DataAccessDefinition

--- a/notebooks/binary_average_attack.ipynb
+++ b/notebooks/binary_average_attack.ipynb
@@ -52,14 +52,12 @@
    "source": [
     "from shfl.private.node import DataNode\n",
     "from shfl.differential_privacy.dp_mechanism import RandomizedResponseBinary\n",
-    "from shfl.private.data import DataAccessDefinition\n",
     "\n",
     "n = 1 #the node is guilty\n",
     "\n",
     "node_single = DataNode()\n",
     "node_single.set_private_data(name=\"guilty\", data=np.array([n]))\n",
-    "dp_mechanism = RandomizedResponseBinary(f0=0.8, f1=0.8)\n",
-    "data_access_definition = DataAccessDefinition(dp_mechanism=dp_mechanism)\n",
+    "data_access_definition = RandomizedResponseBinary(f0=0.8, f1=0.8)\n",
     "node_single.configure_data_access(\"guilty\", data_access_definition)"
    ]
   },
@@ -104,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.788\n"
+      "0.78\n"
      ]
     }
    ],
@@ -174,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.814\n"
+      "0.778\n"
      ]
     }
    ],
@@ -196,9 +194,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Sherpa_venvPy3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "sherpa_venvpy3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -210,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
