--- a/notebooks/federated_learning_regression.ipynb
+++ b/notebooks/federated_learning_regression.ipynb
@@ -50,9 +50,9 @@
      "text": [
       "Shape of train_data: (16512, 8)\n",
       "Shape of train_labels: (16512,)\n",
-      "One sample features: [ 2.00000000e+00  3.00000000e+01  2.77388256e+00  1.10692375e+00\n",
-      "  3.67800000e+03  3.22348817e+00  3.40900000e+01 -1.18310000e+02]\n",
-      "One sample label: 2.406\n"
+      "One sample features: [ 3.39060000e+00  1.50000000e+01  4.02361111e+00  1.01111111e+00\n",
+      "  2.34000000e+03  3.25000000e+00  3.76700000e+01 -1.22480000e+02]\n",
+      "One sample label: 3.037\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
     "import shfl\n",
     "\n",
     "iid_distribution = shfl.data_distribution.IidDataDistribution(database)\n",
-    "federated_data, test_data, test_label = iid_distribution.get_federated_data(\"hotels_california\", 20, percent=10)"
+    "federated_data, test_data, test_label = iid_distribution.get_federated_data(20, percent=10)"
    ]
   },
   {
@@ -166,77 +166,83 @@
      "output_type": "stream",
      "text": [
       "Accuracy round 0\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1485e5d90>: [3.7208566212838936, 1.5233341455459595]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x10f9e4150>: [4.207773434099301, 1.6796486377716064]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x149166f50>: [4.00747069092684, 1.6168088912963867]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fda50>: [3.7033289190410645, 1.5174965858459473]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd8d0>: [4.147247159203817, 1.6607636213302612]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd1d0>: [4.038172195124072, 1.6265453100204468]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd250>: [3.800459671390149, 1.5497686862945557]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd3d0>: [3.6900354448214983, 1.5130497217178345]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd650>: [3.649191832357599, 1.4994938373565674]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd610>: [3.6903590851051864, 1.5130915641784668]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd290>: [3.7377826650013297, 1.5289093255996704]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fded0>: [3.6756937965866205, 1.5083614587783813]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806110>: [4.1989716781202215, 1.6768969297409058]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806290>: [4.3056393242621605, 1.7097564935684204]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806410>: [3.783479692399964, 1.5438653230667114]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806590>: [3.9463836241138073, 1.5974183082580566]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806710>: [3.6434890909712445, 1.4976446628570557]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806890>: [4.055266624273256, 1.631840467453003]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806a10>: [3.9316312046938164, 1.592592716217041]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806b90>: [3.6523134874743084, 1.5005908012390137]\n",
-      "Global model test performance : [3.871745092924251, 1.5731011629104614]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6410>: [6.30829996101616, 1.6697971820831299]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6d50>: [4.9624294051828315, 1.8432769775390625]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6dd0>: [4.478764112605605, 1.5718355178833008]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6ad0>: [4.735966440319091, 1.5490785837173462]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6850>: [4.3795931875243665, 1.5281556844711304]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6e90>: [4.479200812273247, 1.5332965850830078]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6f10>: [5.015918417494427, 1.855161190032959]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de090>: [5.174788645071577, 1.8837294578552246]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de1d0>: [4.290614081907642, 1.5385583639144897]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de350>: [6.5674704451893655, 1.700179934501648]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de410>: [4.471469467000444, 1.5266742706298828]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de550>: [4.368231660635897, 1.538894772529602]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de690>: [4.943353719489519, 1.8246454000473022]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de7d0>: [4.883218332778576, 1.8159539699554443]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de910>: [5.926103606704594, 2.102795124053955]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9dea50>: [5.300993760426839, 1.9367866516113281]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9deb90>: [4.21886038965033, 1.5518096685409546]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9decd0>: [4.189591461373854, 1.535025954246521]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9dee10>: [4.623599083848702, 1.5374374389648438]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9def50>: [4.448289117147756, 1.6846935749053955]\n",
+      "Global model test performance : [4.232840907666111, 1.56881844997406]\n",
       "\n",
       "\n",
       "\n",
       "Accuracy round 1\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1485e5d90>: [2.461470829424008, 1.1421529054641724]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x10f9e4150>: [2.465307498163031, 1.143122673034668]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x149166f50>: [2.4668691657310307, 1.1435151100158691]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fda50>: [2.4621860759202825, 1.142232894897461]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd8d0>: [2.5027708083160163, 1.1513835191726685]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd1d0>: [2.4695629666942036, 1.1439915895462036]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd250>: [2.461087422777516, 1.1420598030090332]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd3d0>: [2.4627324555271355, 1.1424779891967773]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd650>: [2.4636779829513196, 1.1425962448120117]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd610>: [2.4654839778131294, 1.1431323289871216]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd290>: [2.4630517146384068, 1.1425613164901733]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fded0>: [2.4623085232668145, 1.1423251628875732]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806110>: [2.527479055315949, 1.156822919845581]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806290>: [2.4823412673417913, 1.1466591358184814]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806410>: [2.465676008268844, 1.143052577972412]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806590>: [2.463854728743087, 1.142671823501587]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806710>: [2.46581929044206, 1.1430671215057373]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806890>: [2.4690507530241974, 1.1440834999084473]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806a10>: [2.4777040537013564, 1.1457817554473877]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806b90>: [2.465525222379108, 1.1429890394210815]\n",
-      "Global model test performance : [2.4641770078230274, 1.1428226232528687]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6410>: [5.429573670838231, 1.5737693309783936]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6d50>: [4.1545783031818475, 1.6123883724212646]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6dd0>: [5.726625494254652, 2.0533385276794434]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6ad0>: [4.5660707044971085, 1.5012034177780151]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6850>: [5.328921175742334, 1.564619541168213]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6e90>: [4.548287504403166, 1.4971295595169067]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6f10>: [4.790143844693206, 1.8069220781326294]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de090>: [5.6836285960766695, 2.048715591430664]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de1d0>: [4.746558997058129, 1.5140818357467651]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de350>: [5.224142377690751, 1.91444993019104]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de410>: [5.923612212025842, 1.6210893392562866]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de550>: [4.483850379322851, 1.714110016822815]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de690>: [4.188991701880167, 1.6207504272460938]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de7d0>: [5.065242856047874, 1.884689450263977]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de910>: [5.256388194801271, 1.9397996664047241]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9dea50>: [4.5600129282751745, 1.7381001710891724]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9deb90>: [4.189499568569568, 1.4716506004333496]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9decd0>: [4.286289536675741, 1.478980302810669]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9dee10>: [4.027058399924936, 1.471259355545044]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9def50>: [3.9018463848173157, 1.4754761457443237]\n",
+      "Global model test performance : [3.940671445787415, 1.5106621980667114]\n",
       "\n",
       "\n",
       "\n",
       "Accuracy round 2\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1485e5d90>: [2.9708116073016972, 1.2504193782806396]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x10f9e4150>: [3.0779315371846043, 1.271214246749878]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x149166f50>: [2.935552024102026, 1.2433899641036987]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fda50>: [3.243141257485678, 1.3028678894042969]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd8d0>: [2.498443049053813, 1.1514710187911987]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd1d0>: [2.7221398612325505, 1.1997219324111938]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd250>: [2.993621266165445, 1.2548993825912476]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd3d0>: [2.957844231479852, 1.247740387916565]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd650>: [3.0113214818082112, 1.2583433389663696]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd610>: [3.0531901703324427, 1.2663135528564453]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fd290>: [3.1458325349083243, 1.2843083143234253]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x1297fded0>: [3.070475973824198, 1.2698602676391602]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806110>: [2.4210245997406714, 1.1322230100631714]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806290>: [2.6092216876126075, 1.176040768623352]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806410>: [3.2575526791949603, 1.3055224418640137]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806590>: [2.6679962439130445, 1.1882789134979248]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806710>: [3.229357588198758, 1.3001972436904907]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806890>: [2.903797003649926, 1.2368217706680298]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806a10>: [2.6190241362697395, 1.178106427192688]\n",
-      "Test performance client <shfl.private.node.DataNode object at 0x129806b90>: [3.3242835203806558, 1.3182264566421509]\n",
-      "Global model test performance : [2.889869113301122, 1.2341890335083008]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6410>: [6.092298284057499, 1.627364993095398]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6d50>: [3.856752342031908, 1.5367120504379272]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6dd0>: [4.881180482317311, 1.8400213718414307]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6ad0>: [5.207613471866578, 1.5384488105773926]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6850>: [5.218909400378087, 1.5393985509872437]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6e90>: [4.003412897272628, 1.4248138666152954]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9d6f10>: [4.06278041906135, 1.6032482385635376]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de090>: [5.2534719400627665, 1.9494433403015137]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de1d0>: [4.9019195793211, 1.5071090459823608]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de350>: [4.363466815430988, 1.6853066682815552]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de410>: [5.228817091431728, 1.5401445627212524]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de550>: [3.6301590342854344, 1.4445422887802124]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de690>: [3.7960730689440587, 1.5134227275848389]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de7d0>: [4.574200534081275, 1.7576537132263184]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de910>: [4.333354114562042, 1.686981201171875]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9dea50>: [3.991094197413718, 1.5785815715789795]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9deb90>: [4.27354805783708, 1.4435148239135742]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9decd0>: [3.9834884802500405, 1.4230742454528809]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9dee10>: [4.59232067877008, 1.4753198623657227]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9def50>: [3.6635092450666797, 1.4082592725753784]\n",
+      "Global model test performance : [3.649514586426491, 1.4211302995681763]\n",
       "\n",
       "\n",
       "\n"
