Making query optional parameter in laplace mechanism

--- a/notebooks/differential_privacy_laplace.ipynb
+++ b/notebooks/differential_privacy_laplace.ipynb
@@ -219,7 +219,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from shfl.private.query import IdentityFunction\n",
     "from shfl.differential_privacy import LaplaceMechanism\n",
     "\n",
     "def experiment(sensitivity, epsilon):\n",
@@ -229,7 +228,7 @@
     "    federated_array = shfl.private.federated_operation.federate_array(true_heights, len(true_heights))\n",
     "    \n",
     "    # Define allowed access to data. \n",
-    "    data_access_definition = LaplaceMechanism(IdentityFunction(), sensitivity, epsilon)\n",
+    "    data_access_definition = LaplaceMechanism(sensitivity, epsilon)\n",
     "    federated_array.configure_data_access(data_access_definition)\n",
     "    \n",
     "    # Query data\n",
