--- a/notebooks/differential_privacy_exponential.ipynb
+++ b/notebooks/differential_privacy_exponential.ipynb
@@ -78,7 +78,7 @@
     "\\Delta u = r_{max}.\n",
     "$$\n",
     "\n",
-    "The complication in this case arises from the fact that the output price may not be directly perturbed. For example [Dwork], suppose there are four bidders: A, F, I, K, where where A, F, I each bid 1.00&euro; and K bids 3.01&euro;, so $x = \\{1, 1, 1, 3.01\\}$.  Fixing the price to 3.01&euro; the revenue is $u =$ 3.01&euro;, at 3.00&euro; we have $u =$3.00&euro;, at 1.00&euro; we have $u =$4.00&euro;. However, if we fix the price at 3.02&euro; the revenue is zero! The revenue plot for this specific demand defined by $x$ is shown below. "
+    "The complication in this case arises from the fact that the output price may not be directly perturbed. For example in  [Example 3.5 of The Algorithmic Foundations of Differential Privacy](https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf), they suppose there are four bidders: A, F, I, K, where A, F, I each bid 1.00&euro; and K bids 3.01&euro;, so $x = \\{1, 1, 1, 3.01\\}$.  Fixing the price to 3.01&euro; the revenue is $u =$ 3.01&euro;, at 3.00&euro; we have $u =$3.00&euro;, at 1.00&euro; we have $u =$4.00&euro;. However, if we fix the price at 3.02&euro; the revenue is zero! The revenue plot for this specific demand defined by $x$ is shown below. "
    ]
   },
   {
@@ -371,9 +371,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Sherpa_venvPy3",
    "language": "python",
-   "name": "python3"
+   "name": "sherpa_venvpy3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -385,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
