--- a/notebooks/differential_privacy_laplace.ipynb
+++ b/notebooks/differential_privacy_laplace.ipynb
@@ -294,9 +294,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Sherpa_venvPy3",
    "language": "python",
-   "name": "python3"
+   "name": "sherpa_venvpy3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -308,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
