--- a/notebooks/evaluation_methodology.ipynb
+++ b/notebooks/evaluation_methodology.ipynb
@@ -11,21 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import shfl\n",
     "import keras\n",
@@ -62,14 +54,22 @@
     "    model.compile(optimizer=\"rmsprop\", loss=\"categorical_crossentropy\", metrics=[\"accuracy\"])\n",
     "    \n",
     "    return shfl.model.DeepLearningModel(model)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Read data\n",
     "database = shfl.data_base.Emnist()\n",
     "train_data, train_labels, val_data, val_labels, test_data, test_labels = database.load_data()\n",
     "\n",
     "#Distribute among clients\n",
     "non_iid_distribution = shfl.data_distribution.NonIidDataDistribution(database)\n",
-    "federated_data, test_data, test_labels = non_iid_distribution.get_federated_data(num_nodes=20, percent=10)\n",
+    "federated_data, test_data, test_labels = non_iid_distribution.get_federated_data(num_nodes=5, percent=10)\n",
     "\n",
     "#Set up aggregation operator\n",
     "aggregator = shfl.federated_aggregator.AvgFedAggregator()\n",
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluation methodology 1: global test dataset"
+    "## Evaluation methodology 1: Global test dataset"
    ]
   },
   {
@@ -99,45 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": true
-    }
+    },
+    "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy round 0\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2772a990>: [13.276649362182617, 0.17487500607967377]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2772a910>: [11.485916297531128, 0.28462499380111694]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2772aa90>: [12.950237517547608, 0.19642500579357147]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2772abd0>: [5.401505676078797, 0.6487749814987183]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2772ad10>: [11.450444860076905, 0.288875013589859]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2772af50>: [7.8874158100128176, 0.5026999711990356]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a27739050>: [12.946188985443115, 0.19664999842643738]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a27739150>: [4.228973247241974, 0.7184249758720398]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a27739290>: [12.952880805206298, 0.19609999656677246]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a27739410>: [4.551164772558212, 0.7043250203132629]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a277394d0>: [6.614466170883179, 0.56597501039505]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a27739610>: [8.7480803565979, 0.45387500524520874]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a27739750>: [7.771764695930481, 0.5077250003814697]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a27739890>: [12.275676940917968, 0.23559999465942383]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a277399d0>: [12.941662697601318, 0.1969500035047531]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a27739b10>: [4.5537614236831665, 0.7067999839782715]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a27739c50>: [4.548600417900086, 0.7043499946594238]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a27739d90>: [8.126810558319091, 0.4898749887943268]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a27739ed0>: [11.804842121124267, 0.2659499943256378]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a27741050>: [7.753722988510132, 0.5121750235557556]\n",
-      "Global model test performance : [6.94394196357727, 0.5251500010490417]\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_data = np.reshape(test_data, (test_data.shape[0], test_data.shape[1], test_data.shape[2],1))\n",
     "federated_government.run_rounds(1, test_data, test_labels)"
@@ -154,17 +123,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluation methodology 2: global test dataset and local test datasets\n",
+    "## Evaluation methodology 2: Global test dataset and local test datasets\n",
     "\n",
     "In this evaluation methodology we consider that there is, as in the previous one, a global test dataset and that each client has a local test dataset according to the distribution of their training data. Hence, in each round we show the evaluation metrics of each client on their local test and the global test. This evaluation methodology is more complete as it shows the performance of the local FL models in the global and local distribution of the data, which gives as more information."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "shfl.private.federated_operation.split_train_test(federated_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy round 0\n",
+      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x10e098550>: Global test: [10.471900854110718, 0.34769999980926514], Local test: [0.2193414881825447, 0.925000011920929]\n",
+      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a39c9b590>: Global test: [4.415482014703751, 0.7213249802589417], Local test: [0.3248431205749512, 0.9041666388511658]\n",
+      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a39c9b8d0>: Global test: [8.514931289863586, 0.4702250063419342], Local test: [0.1404848636438449, 0.9572916626930237]\n",
+      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a39c9ba10>: Global test: [5.667979608154297, 0.6416500210762024], Local test: [0.35284336979190506, 0.8989583253860474]\n",
+      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a39c9bb90>: Global test: [12.912494927215576, 0.19882500171661377], Local test: [0.04400221361003551, 0.9884696006774902]\n",
+      "Global model test performance : [9.551656221008301, 0.3930499851703644]\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Run rounds with global and local tests\n",
+    "test_data = np.reshape(test_data, (test_data.shape[0], test_data.shape[1], test_data.shape[2],1))\n",
+    "federated_government.run_rounds(1, test_data, test_labels)"
+   ]
   }
  ],
  "metadata": {
