Differential privacy: corrected typos and small rephrasings, both on notebooks and documentation

--- a/notebooks/federated_SVD.ipynb
+++ b/notebooks/federated_SVD.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Federated Matrix Factorization\n",
+    "# Federated matrix factorization\n",
     "\n",
     "In this notebook we build a federated version of the well-known SVD recommender system introduced by [Simon Funk](https://sifter.org/~simon/journal/20061211.html) during the Netflix Prize. In the following we give a short description of the algorithm and point towards the relevant papers to develop a federated version.\n",
     "\n",
@@ -818,9 +818,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (venv)",
+   "display_name": "Sherpa_venvPy3",
    "language": "python",
-   "name": "venv"
+   "name": "sherpa_venvpy3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -832,9 +832,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
