--- a/notebooks/binary_average_attack.ipynb
+++ b/notebooks/binary_average_attack.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Permanent Randomized response\n",
+    "# Permanent randomized response\n",
     "\n",
     "The basic idea of differential privacy is to make a particular query stochastic so that the underlying data is kept private. The average attack consists of performing the same query many times in order to reliably estimate the underlying data. This is, of course, not desirable so we should either limit the number of queries or design algorithms that are not vulnerable under this kind of attack.\n",
     "\n",
-    "In this notebook we present a simple example of this phenomenon based on a single node that contains one binary number $n$ that encondes whether the node is guilty ($n=1$) or innocent ($n=0$). \n",
-    "A randomized response algorithm (see [The Algorithmic Foundationsof Differential Privacy](https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf), Section 3.2) is used to query the node in order to preserve the privacy of $n$."
+    "In this notebook we present a simple example of this phenomenon based on a single node that contains one binary number $n$ that encodes whether the node is guilty ($n=1$) or innocent ($n=0$). \n",
+    "A randomized response algorithm (see [The Algorithmic Foundations of Differential Privacy](https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf), Section 3.2) is used to query the node in order to preserve the privacy of $n$."
    ]
   },
   {
@@ -17,24 +17,6 @@
    "metadata": {},
    "source": [
     "### Average attack"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import shfl"
    ]
   },
   {
@@ -46,10 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import shfl\n",
     "from shfl.private.node import DataNode\n",
     "from shfl.differential_privacy.dp_mechanism import RandomizedResponseBinary\n",
     "\n",
@@ -70,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -95,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.78\n"
+      "0.808\n"
      ]
     }
    ],
@@ -127,19 +111,19 @@
    "source": [
     "### Permanent randomized response\n",
     "\n",
-    "A possible solution to this problem (e.g. see [RAPPOR technology](https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/42852.pdf) and [this paper](https://www.sciencedirect.com/science/article/pii/S0020025518310429)) is to create a node that contains two pieces of information: the true data and a **permantent randomized respose** (PRR). The latter is initialized to None and, once the node receives the first query, it creates a random binary number following the algorithm described above which is saved as the PRR. The result of the query is then a randomized response using the PRR as input. This way, even if the query is performed a large number of times, the attacker may only guess with certainty the PRR, but not the true data."
+    "A possible solution to this problem (e.g. see [RAPPOR technology](https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/42852.pdf) and [Jiang 2019](https://www.sciencedirect.com/science/article/pii/S0020025518310429)) is to create a node that contains two pieces of information: the true data and a **permanent randomized response** (PRR). The latter is initialized to None and, once the node receives the first query, it creates a random binary number following the algorithm described above which is saved as the PRR. The result of the query is then a randomized response using the PRR as input. This way, even if the query is performed a large number of times, the attacker may only guess with certainty the PRR, but not the true data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The PRR is: 1\n"
+      "The PRR is: 0\n"
      ]
     }
    ],
@@ -160,19 +144,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From now on, all the external queries are done over the permanent one. The true data remains completely hidden."
+    "From now on, all the external queries are done over the permanent randimized data, while the raw data remains completely hidden."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.778\n"
+      "0.206\n"
      ]
     }
    ],
@@ -188,15 +172,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The result is not always close to 0.8, since the permanent response might be 0. The average attack may, at best, identify the permanent random response, but not the raw data."
+    "The result is not always close to 0.8, since the permanent response might be 0. The average attack may, at best, identify the permanent randomized response, but not the raw data."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Sherpa_venvPy3",
    "language": "python",
-   "name": "python3"
+   "name": "sherpa_venvpy3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -208,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
