--- a/notebooks/federated_learning_regression.ipynb
+++ b/notebooks/federated_learning_regression.ipynb
@@ -4,11 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Federated learning: Regression\n",
+    "# Federated learning: regression using the California Housing database\n",
     "\n",
-    "In this notebook we are going to show how you can use a federated learning environment to create a regression model. In the notebook \"Federated learning: Simple experiment\" we explained the basic concepts of the framework, so now we will go slightly faster.\n",
+    "In this notebook we are going to show how you can use a federated learning environment to create a regression model. \n",
+    "In the notebook [\"Federated learning: regression for a 2D simple case\"](./federated_learning_regression_simple.ipynb) we explained the basic concepts of the framework, so now we will go slightly faster.\n",
     "\n",
-    "Firts of all we load a regression dataset that the framework already includes to allow regression experiments."
+    "First of all, we load a dataset (included in the framework) to allow for regression experiments."
    ]
   },
   {
@@ -233,13 +234,7 @@
       "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9de910>: [4.333354114562042, 1.686981201171875]\n",
       "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9dea50>: [3.991094197413718, 1.5785815715789795]\n",
       "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9deb90>: [4.27354805783708, 1.4435148239135742]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9decd0>: [3.9834884802500405, 1.4230742454528809]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9decd0>: [3.9834884802500405, 1.4230742454528809]\n",
       "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9dee10>: [4.59232067877008, 1.4753198623657227]\n",
       "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x13d9def50>: [3.6635092450666797, 1.4082592725753784]\n",
       "Global model test performance : [3.649514586426491, 1.4211302995681763]\n",
@@ -278,9 +273,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
