--- a/notebooks/evaluation_methodology.ipynb
+++ b/notebooks/evaluation_methodology.ipynb
@@ -11,17 +11,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import shfl\n",
     "import keras\n",
     "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "random.seed(123)\n",
+    "np.random.seed(seed=123)\n",
     "\n",
     "class Reshape(shfl.private.FederatedTransformation):\n",
     "    \n",
@@ -59,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,19 +106,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first evaluation methodology that we propose consists of the federated version of the classical evaluation methods. For that purpose, we use a common test dataset allocated in the server. We show the evaluation metrics (loss and accuracy in this case) in each round of learning both in local models and global updated model. We show the behaviour of this evaluation methodology as follows"
+    "The first evaluation methodology that we propose consists of the federated version of the classical evaluation methods. For that purpose, we use a common test dataset allocated in the server. We show the evaluation metrics (loss and accuracy in this case) in each round of learning both in local models and global updated model. We show the behaviour of this evaluation methodology as follows."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": true
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy round 0\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e21510>: [12.972314575958253, 0.19499999284744263]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e21550>: [4.393721841335297, 0.7226250171661377]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e21650>: [10.832231537246704, 0.3259499967098236]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e21790>: [4.266248627996445, 0.7315000295639038]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e218d0>: [4.621014157485962, 0.7071999907493591]\n",
+      "Global model test performance : [8.520207717514038, 0.4586000144481659]\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "test_data = np.reshape(test_data, (test_data.shape[0], test_data.shape[1], test_data.shape[2],1))\n",
     "federated_government.run_rounds(1, test_data, test_labels)"
@@ -125,12 +154,19 @@
    "source": [
     "## Evaluation methodology 2: Global test dataset and local test datasets\n",
     "\n",
-    "In this evaluation methodology we consider that there is, as in the previous one, a global test dataset and that each client has a local test dataset according to the distribution of their training data. Hence, in each round we show the evaluation metrics of each client on their local test and the global test. This evaluation methodology is more complete as it shows the performance of the local FL models in the global and local distribution of the data, which gives as more information."
+    "In this evaluation methodology we consider that there is, as in the previous one, a global test dataset and that each client has a local test dataset according to the distribution of their training data. Hence, in each round we show the evaluation metrics of each client on their local and the global test. This evaluation methodology is more complete as it shows the performance of the local FL models in the global and local distribution of the data, which gives as more information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we split each client's data in train and test partitions. You can find this method in [Federated Operation](https://github.com/sherpaai/Sherpa.FL/blob/master/shfl/private/federated_operation.py). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,8 +174,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After that, each client owns a training set which uses for training the local learning model and a test set which uses to evaluate. \n",
+    "\n",
+    "We are now ready to show the behaviour of this evaluation methodology."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -147,22 +192,29 @@
      "output_type": "stream",
      "text": [
       "Accuracy round 0\n",
-      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x10e098550>: Global test: [10.471900854110718, 0.34769999980926514], Local test: [0.2193414881825447, 0.925000011920929]\n",
-      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a39c9b590>: Global test: [4.415482014703751, 0.7213249802589417], Local test: [0.3248431205749512, 0.9041666388511658]\n",
-      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a39c9b8d0>: Global test: [8.514931289863586, 0.4702250063419342], Local test: [0.1404848636438449, 0.9572916626930237]\n",
-      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a39c9ba10>: Global test: [5.667979608154297, 0.6416500210762024], Local test: [0.35284336979190506, 0.8989583253860474]\n",
-      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a39c9bb90>: Global test: [12.912494927215576, 0.19882500171661377], Local test: [0.04400221361003551, 0.9884696006774902]\n",
-      "Global model test performance : [9.551656221008301, 0.3930499851703644]\n",
-      "\n",
-      "\n",
-      "\n"
+      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e21510>: Global test: [12.99019923171997, 0.19382500648498535], Local test: [0.0407491410151124, 0.9906250238418579]\n",
+      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e21550>: Global test: [4.718754151058197, 0.7013499736785889], Local test: [0.21528405373295148, 0.9416666626930237]\n",
+      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e21650>: Global test: [10.071145951461792, 0.3734999895095825], Local test: [0.04247177823757132, 0.9906250238418579]\n",
+      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e21790>: Global test: [5.453462917232513, 0.6549000144004822], Local test: [0.23397006044785182, 0.9333333373069763]\n",
+      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e218d0>: Global test: [3.7176213492393493, 0.7637249827384949], Local test: [0.30302825570106506, 0.9208333492279053]\n"
      ]
     }
    ],
    "source": [
-    "#Run rounds with global and local tests\n",
+    "#We restart federated goverment\n",
+    "federated_government = shfl.learning_approach.FederatedGovernment(model_builder, federated_data, aggregator)\n",
+    "\n",
     "test_data = np.reshape(test_data, (test_data.shape[0], test_data.shape[1], test_data.shape[2],1))\n",
     "federated_government.run_rounds(1, test_data, test_labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We appreciate the significance of this new evaluation methodology in the output produced. For example, the last client performed the worst in the global test while it was the best in its local test. This indicates that the data distribution of this client is most likely very poor compared to the global data distribution, for example, consisting of only two classes. This produces a really good local learning model in just one round of learning, being a simpler problem but with a very low global test performance.\n",
+    "\n",
+    "This highlights the strenght of using specific evaluation methodologies in FL, especially when the distribution of data among clients follows a non-IID distribution (see [Federated Sampling](http://localhost:8888/notebooks/federated_sampling.ipynb))."
    ]
   }
  ],
