--- a/notebooks/evaluation_methodology.ipynb
+++ b/notebooks/evaluation_methodology.ipynb
@@ -124,11 +124,11 @@
      "output_type": "stream",
      "text": [
       "Accuracy round 0\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e21510>: [12.972314575958253, 0.19499999284744263]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e21550>: [4.393721841335297, 0.7226250171661377]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e21650>: [10.832231537246704, 0.3259499967098236]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e21790>: [4.266248627996445, 0.7315000295639038]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e218d0>: [4.621014157485962, 0.7071999907493591]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112a45910>: [12.972314575958253, 0.19499999284744263]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112a28390>: [4.393721841335297, 0.7226250171661377]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a36ede910>: [10.832231537246704, 0.3259499967098236]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a36edea10>: [4.266248627996445, 0.7315000295639038]\n",
+      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a36edeb50>: [4.621014157485962, 0.7071999907493591]\n",
       "Global model test performance : [8.520207717514038, 0.4586000144481659]\n",
       "\n",
       "\n",
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -192,11 +192,15 @@
      "output_type": "stream",
      "text": [
       "Accuracy round 0\n",
-      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e21510>: Global test: [12.99019923171997, 0.19382500648498535], Local test: [0.0407491410151124, 0.9906250238418579]\n",
-      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e21550>: Global test: [4.718754151058197, 0.7013499736785889], Local test: [0.21528405373295148, 0.9416666626930237]\n",
-      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e21650>: Global test: [10.071145951461792, 0.3734999895095825], Local test: [0.04247177823757132, 0.9906250238418579]\n",
-      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e21790>: Global test: [5.453462917232513, 0.6549000144004822], Local test: [0.23397006044785182, 0.9333333373069763]\n",
-      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112e218d0>: Global test: [3.7176213492393493, 0.7637249827384949], Local test: [0.30302825570106506, 0.9208333492279053]\n"
+      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112a45910>: Global test: [12.99019923171997, 0.19382500648498535], Local test: [0.0407491410151124, 0.9906250238418579]\n",
+      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x112a28390>: Global test: [4.718754151058197, 0.7013499736785889], Local test: [0.21528405373295148, 0.9416666626930237]\n",
+      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a36ede910>: Global test: [10.071145951461792, 0.3734999895095825], Local test: [0.04247177823757132, 0.9906250238418579]\n",
+      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a36edea10>: Global test: [5.453462917232513, 0.6549000144004822], Local test: [0.23397006044785182, 0.9333333373069763]\n",
+      "Performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a36edeb50>: Global test: [3.7176213492393493, 0.7637249827384949], Local test: [0.30302825570106506, 0.9208333492279053]\n",
+      "Global model test performance : [7.546652709960937, 0.5162249803543091]\n",
+      "\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -212,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We appreciate the significance of this new evaluation methodology in the output produced. For example, the last client performed the worst in the global test while it was the best in its local test. This indicates that the data distribution of this client is most likely very poor compared to the global data distribution, for example, consisting of only two classes. This produces a really good local learning model in just one round of learning, being a simpler problem but with a very low global test performance.\n",
+    "We appreciate the significance of this new evaluation methodology in the output produced. For example, the first client performed the worst in the global test while it was the best in its local test. This indicates that the data distribution of this client is most likely very poor compared to the global data distribution, for example, consisting of only two classes. This produces a really good local learning model in just one round of learning, being a simpler problem but with a very low global test performance.\n",
     "\n",
     "This highlights the strenght of using specific evaluation methodologies in FL, especially when the distribution of data among clients follows a non-IID distribution (see [Federated Sampling](http://localhost:8888/notebooks/federated_sampling.ipynb))."
    ]
