Links from notebooks to code and notebooks

--- a/notebooks/aggregation_operators.ipynb
+++ b/notebooks/aggregation_operators.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Federated learning: Aggregation operators\n",
     "\n",
-    "In this notebook we provide an explanation of the implementation of the different federated aggregation operators provided in the platform. Before discussing the different aggregation operators, we establish the federated configuration (for more information see [Basic Concepts Notebook](https://github.com/sherpaai/Sherpa.FL/blob/master/notebooks/basic_concepts.ipynb))."
+    "In this notebook we provide an explanation of the implementation of the different federated aggregation operators provided in the platform. Before discussing the different aggregation operators, we establish the federated configuration (for more information see [Basic Concepts Notebook](./basic_concepts.ipynb))."
    ]
   },
   {
@@ -95,14 +95,14 @@
    "source": [
     "## Federated Averaging (FedAvg) Operator\n",
     "\n",
-    "In this section, we detail the implementation of FedAvg (see [FedAVg](https://github.com/sherpaai/Sherpa.FL/blob/master/shfl/federated_aggregator/avgfed_aggregator.py)) proposed  by Google in this [paper](https://arxiv.org/abs/1602.05629). \n",
+    "In this section, we detail the implementation of FedAvg (see [FedAVg](../shfl/federated_aggregator/avgfed_aggregator.py)) proposed  by Google in this [paper](https://arxiv.org/abs/1602.05629). \n",
     "\n",
     "It is based on the arithmetic mean of the local weights $W_i$ trained in each of the local clients $C_i$. That is, the weights $W$ of the global model after each round of training are\n",
     "\n",
     "$$W = \\frac{1}{n} \\sum_{i=1}^n W_i$$\n",
     "\n",
     "\n",
-    "For its implementation, we create a class that implements [FederatedAggregator](https://github.com/sherpaai/Sherpa.FL/blob/master/shfl/federated_aggregator/federated_aggregator.py) interface. The method aggregate_weights is overwritten calculating the mean of the local weights of each client. "
+    "For its implementation, we create a class that implements [FederatedAggregator](../shfl/federated_aggregator/federated_aggregator.py) interface. The method aggregate_weights is overwritten calculating the mean of the local weights of each client. "
    ]
   },
   {
@@ -146,7 +146,7 @@
    "source": [
     "## Weighted Federated Averaging (WeightedFedAvg) Operator\n",
     "\n",
-    "In this section, we detail the implementation of WeightedFedAvg (see [WeightedFedAVg](https://github.com/sherpaai/Sherpa.FL/blob/master/shfl/federated_aggregator/weighted_avgfed_aggregator.py)). It is the weighted version of FedAvg. The weight of each client $C_i$ is determined by the amount of client data $n_i$ with respect to total training data $n$. That is, the weights $W$ of the global model after each round of training are \n",
+    "In this section, we detail the implementation of WeightedFedAvg (see [WeightedFedAVg](../shfl/federated_aggregator/weighted_avgfed_aggregator.py)). It is the weighted version of FedAvg. The weight of each client $C_i$ is determined by the amount of client data $n_i$ with respect to total training data $n$. That is, the weights $W$ of the global model after each round of training are \n",
     "\n",
     "$$W =  \\sum_{i=1}^n \\frac{n_i}{n} W_i$$\n",
     "\n",
