--- a/notebooks/evaluation_methodology.ipynb
+++ b/notebooks/evaluation_methodology.ipynb
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we split each client's data in train and test partitions. You can find this method in [Federated Operation](https://github.com/sherpaai/Sherpa.FL/blob/master/shfl/private/federated_operation.py). "
+    "First, we split each client's data in train and test partitions. You can find this method in [Federated Operation](../shfl/private/federated_operation.py). "
    ]
   },
   {
@@ -218,7 +218,7 @@
    "source": [
     "We appreciate the significance of this new evaluation methodology in the output produced. For example, the first client performed the worst in the global test while it was the best in its local test. This indicates that the data distribution of this client is most likely very poor compared to the global data distribution, for example, consisting of only two classes. This produces a really good local learning model in just one round of learning, being a simpler problem but with a very low global test performance.\n",
     "\n",
-    "This highlights the strenght of using specific evaluation methodologies in FL, especially when the distribution of data among clients follows a non-IID distribution (see [Federated Sampling](http://localhost:8888/notebooks/federated_sampling.ipynb))."
+    "This highlights the strenght of using specific evaluation methodologies in FL, especially when the distribution of data among clients follows a non-IID distribution (see [Federated Sampling](./federated_sampling.ipynb))."
    ]
   }
  ],
